[Mac] Remove Excessive Touch Bar Invalidates

The touch bar is updated with every page load, so that
the stop/reload button would have the proper state.

However, this causes the search button to blink frequently
in some hardware. To fix this issue, remove the excessive
invalidates and update the stop/reload item independently.

Bug: 749424
Change-Id: I02c5dd3ea8ddf978ecab6a3e5297df8d578939c2
Reviewed-on: https://chromium-review.googlesource.com/612694
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494292}
Former-commit-id: ccfaf09a251e8a7c752638b07ae9dd1a37156889